--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -79731,8 +79731,46 @@ table.dataTable.no-footer {
 }
 
 div.form_box {
-  padding: 0 15px 15px 15px;
+  padding: 16px 15px 15px 15px;
   border: solid #ced4da 1px;
   background-color: #f9fafb;
+}
+
+div.sidebar-logo {
+  background-color: #45763c;
+}
+
+div.sidebar-logo div.peer-greed h5.logo-text {
+  color: #fff;
+}
+
+div.header-container {
+  background-color: #71a84f;
+}
+
+div.header-container li a i {
+  color: #fff;
+}
+
+ul.sidebar-menu {
+  background-color: #71a84f;
+}
+
+ul.sidebar-menu li a {
+  color: #fff;
+}
+
+.table_head {
+  background-color: #45763c;
+  color: #fff;
+}
+
+button.btn_remove {
+  background-color: red;
+  color: #fff;
+  font-weight: 600;
+  border: solid 1px #fff;
+  border-radius: 3px;
+  padding: 3px 15px 3px 15px;
 }
 
