--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -79760,17 +79760,38 @@ ul.sidebar-menu li a {
   color: #fff;
 }
 
-.table_head {
+#message_wrap {
+  position: absolute;
+  top: 5%;
+  right: 5%;
+}
+
+.alert_message {
+  background-color: #2196f3;
+  color: #fff;
+}
+
+.updates_section .table_head {
   background-color: #45763c;
   color: #fff;
 }
 
-button.btn_remove {
+.updates_section button.btn_remove {
   background-color: red;
   color: #fff;
   font-weight: 600;
   border: solid 1px #fff;
-  border-radius: 3px;
+  border-radius: 5px;
   padding: 3px 15px 3px 15px;
+}
+
+.updates_section .error_message_image {
+  color: #f44342;
+  font-size: 11px;
+}
+
+.updates_section .error_image {
+  border: solid 1px #f44342;
+  border-radius: 5px;
 }
 
