show info by user

--- a/public/css/admin.css
+++ b/public/css/admin.css
@@ -79771,12 +79771,14 @@ ul.sidebar-menu li a {
   color: #fff;
 }
 
-.updates_section .table_head {
+.updates_section .table_head,
+.users_section .table_head {
   background-color: #45763c;
   color: #fff;
 }
 
-.updates_section button.btn_remove {
+.updates_section button.btn_remove,
+.users_section button.btn_remove {
   background-color: red;
   color: #fff;
   font-weight: 600;
@@ -79785,13 +79787,45 @@ ul.sidebar-menu li a {
   padding: 3px 15px 3px 15px;
 }
 
-.updates_section .error_message_image {
+.updates_section .error_message_image,
+.users_section .error_message_image {
   color: #f44342;
   font-size: 11px;
 }
 
-.updates_section .error_image {
+.updates_section .error_image,
+.users_section .error_image {
   border: solid 1px #f44342;
   border-radius: 5px;
+}
+
+div.user_info {
+  border: solid 1px #e9eaeb;
+  background-color: #f9fafb;
+  margin: 20px 0 0 0;
+  padding: 0 5px 0 3px;
+}
+
+.bg_status_1 {
+  background-color: #fec526;
+}
+
+.bg_status_2 {
+  background-color: #ff7171;
+  color: #fff;
+}
+
+.bg_status_3 {
+  background-color: #2680eb;
+  color: #fff;
+}
+
+.bg_status_4 {
+  background-color: #a826eb;
+  color: #fff;
+}
+
+.bg_status_5 {
+  background-color: #7eff60;
 }
 
