--- a/resources/sass/ticket-chat/main.scss
+++ b/resources/sass/ticket-chat/main.scss
@@ -13,5 +13,227 @@
 }
 
 .t_messages {
-  min-height: 300px;
+  height: 400px;
+  overflow-y: scroll;
+
+  .t_not-select {
+    text-align: center;
+    font-weight: 700;
+    padding-top: 100px;
+  }
+
+  .t_flex-message-container {
+    display: flex;
+    flex-direction: column-reverse;
+    padding: 5px;
+    
+    .t_messages-date {
+      text-align: center;
+      position: relative;
+
+      span {
+        font-size: 12px;
+        font-weight: 800;
+        display: inline-block;
+        padding: 2px 15px;
+        background: gray;
+        color: #fff;
+        border-radius: 40px;
+        margin: 0 2px;
+        position: relative;
+        z-index: 10;
+      }
+
+      &:after {
+        content: '';
+        width: 100%;
+        height: 1px;
+        background: gray;
+        position: absolute;
+        top: 50%;
+        z-index: 0;
+        right: 0;
+      }
+    }
+
+    .t_message-container {
+      width: 80%;
+      margin-top: 7px;
+
+      &.other-message.speaker, &.self-message.speaker {
+        .t_message {
+          &:before {
+            content: ' ';
+            position: absolute;
+            width: 0;
+            height: 0;
+            top: 100%;
+            border: 9px solid;
+          }
+          &:after {
+            content: ' ';
+            position: absolute;
+            width: 0;
+            height: 0;
+            top: 100%;
+            border: 6px solid;
+          }
+        }
+      }
+
+      &.self-message {
+        align-self: flex-end;
+
+        .t_message-sender {
+          text-align: end;
+        }
+
+        .t_message {
+          -webkit-box-shadow: -2px 2px 4px #888;
+          -moz-box-shadow: -2px 2px 4px #888;
+          box-shadow: -2px 2px 4px #888;
+        }
+      }
+
+      &.self-message.speaker {
+        .t_message {
+          &:before {
+            right: 15px;
+            border-color: #666 #666 transparent transparent;
+          }
+          &:after {
+            right: 17px;
+            border-color: #fff #fff transparent transparent;
+          }
+        }
+      }
+
+      &.other-message {
+        align-self: flex-start;
+
+        .t_message-sender {
+          text-align: start;
+        }
+
+        .t_message {
+          -webkit-box-shadow: 2px 2px 4px #888;
+          -moz-box-shadow: 2px 2px 4px #888;
+          box-shadow: 2px 2px 4px #888;
+        }
+      }
+
+      &.other-message.speaker {
+        .t_message {
+          &:before {
+            left: 15px;
+            border-color: #666 transparent transparent #666;
+          }
+          &:after {
+            left: 17px;
+            border-color: #fff transparent transparent #fff;
+          }
+        }
+      }
+
+      .t_message {
+        position: relative;
+        width: 100%;
+        line-height: 100px;
+        background-color: #fff;
+        border: 3px solid #666;
+        -webkit-border-radius: 18px;
+        -moz-border-radius: 18px;
+        border-radius: 18px;
+        margin-bottom: 13px;
+        padding: 5px;
+
+        .message-box {
+          font-size: 12px;
+          margin: 1px;
+          color: #000;
+          cursor: default;
+
+          img {
+            width: 100%;
+            cursor: pointer;
+          }
+        }
+        .message-time {
+          font-size: 10px;
+          margin: 0;
+          text-align: end;
+          cursor: default;
+        }
+      }
+
+      .t_message-sender {
+        font-size: 12px;
+        font-weight: 700;
+        cursor: default;
+      }
+    }
+  }
+}
+
+.t_toolbar{
+  display: none;
+  
+  .text-container {
+    position: relative;
+    height: 60px;
+
+    textarea {
+      resize: none;
+      width: 100%;
+      border: 1px solid #000;
+      padding: 7px 40px 7px 7px;
+      font-size: 11px;
+      height: 100%;
+    }
+    
+    .send-button {
+      top: 0;
+      right: 0;
+      height: 60px;
+      position: absolute;
+      cursor: pointer;
+
+      div {
+        width: 30px;
+        height: 30px;
+        background: green;
+        border-radius: 50%;
+        margin-top: 15px;
+        margin-right: 5px;
+        position: relative;
+        
+        i {
+          font-size: 20px;
+          left: 20%;
+          top: 14%;
+          position: absolute;
+          color: #fff;
+        }
+      }
+
+      &:hover {
+        div {
+          background: #275a27;
+        }
+      }
+    }
+  }
+
+  .t_tools {
+    .tool_col {
+      width: 49.3%;
+      display: inline-block;
+      height: 26px;
+
+      select {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
 }
