--- a/public/css/app.css
+++ b/public/css/app.css
@@ -342,6 +342,17 @@ ul li:hover a span {
   cursor: default;
 }
 
+.t_typing {
+  display: none;
+  padding-left: 5px;
+  font-size: 10px;
+}
+
+.t_typing span {
+  font-weight: 700;
+  color: #000;
+}
+
 .t_toolbar {
   display: none;
 }
@@ -399,5 +410,52 @@ ul li:hover a span {
 .t_toolbar .t_tools .tool_col select {
   width: 100%;
   height: 100%;
+}
+
+.photo_preview {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: none;
+}
+
+.photo_preview .fs_fade {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background: #000000;
+  color: #ffffff;
+  opacity: 0.9;
+  z-index: 99990;
+}
+
+.photo_preview img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  cursor: default;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+  z-index: 99991;
+}
+
+.photo_preview button {
+  position: absolute;
+  right: 0;
+  top: 0;
+  z-index: 99992;
+  background: transparent;
+  cursor: pointer;
+  border: none;
+  color: #fff;
+  font-size: 24px;
+  font-weight: 700;
 }
 
