--- a/resources/sass/ticket-chat/main.scss
+++ b/resources/sass/ticket-chat/main.scss
@@ -175,6 +175,17 @@
   }
 }
 
+.t_typing {
+  display: none;
+  padding-left: 5px;
+  font-size: 10px;
+
+  span {
+    font-weight: 700;
+    color: #000;
+  }
+}
+
 .t_toolbar{
   display: none;
   
@@ -235,5 +246,52 @@
         height: 100%;
       }
     }
+  }
+}
+
+.photo_preview {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  display: none;
+
+  .fs_fade {
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background: #000000;
+    color: #ffffff;
+    opacity: 0.9;
+    z-index: 99990;
+  }
+
+  img {
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    cursor: default;
+    width: auto;
+    height: auto;
+    max-width: 100%;
+    max-height: 100%;
+    z-index: 99991;
+  }
+
+  button {
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 99992;
+    background: transparent;
+    cursor: pointer;
+    border: none;
+    color: #fff;
+    font-size: 24px;
+    font-weight: 700;
   }
 }
