show images for menu of users

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -191,3 +191,30 @@ ul li:hover a span {
   color: #fff;
 }
 
+div.info_img {
+  padding-top: 8px;
+}
+
+div.info_img .img_box {
+  padding-right: 0;
+}
+
+div.info_img .img_box img {
+  width: 100%;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+div.img_modal {
+  border-radius: 20px;
+}
+
+div.wrapp_img {
+  height: 300px;
+}
+
+.close_img {
+  font-size: 50px;
+  color: #fff;
+}
+
