--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -177,20 +177,21 @@ div.info_img {
     padding-top: 8px;
     .img_box {
         padding-right: 0;
-        img {
-            width: 100%;
-            border-radius: 5px;
-            cursor: pointer;
-        }
+        width: 100px;
+        height: 100px;
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: center;
+        margin: 10px;
+        cursor: pointer;
     } 
 }
 
-div.img_modal {
+.img_modal {
     border-radius: 20px;
-}
-
-div.wrapp_img {
-    height: 300px;
+    object-fit: cover;
+    width: 100%;
+    max-height: 900px,
 }
 
 .close_img {
