fix pagination in table

--- a/resources/sass/main.scss
+++ b/resources/sass/main.scss
@@ -159,12 +159,6 @@ ul li:hover {
     }
 }
 
-.tickets_chat {
-    padding: 0;
-    margin-top: 43px;
-    border: solid #efefef 1px;
-}
-
 .t_header {
     background-color: #45763c;
     padding: 11px 0 14px 15px;
@@ -201,4 +195,8 @@ div.info_img {
 
 .element_none {
     display: none;
+}
+
+div.dataTables_wrapper div.dataTables_paginate {
+    margin-top: 15px;
 }
